# ai-test

./: .gitignore  README.md  main.py  pyproject.toml  read-txt.py  requirements.txt  search-langchain.py  search-online-2.py  search-online.py  search-with-rag.py  search-with-rag2.py
resources/: manual.txt
tools/: duckduckgo_search.py  google_search.py  rag_file.py
