[project]
name = "test-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate==1.6.0",
  "aiofiles==24.1.0",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.11.18",
  "aiosignal==1.3.2",
  "annotated-types==0.7.0",
  "anthropic==0.51.0",
  "anyio==4.9.0",
  "argparse==1.4.0",
  "asgiref==3.8.1",
  "attrs==25.3.0",
  "backoff==2.2.1",
  "bcrypt==4.3.0",
  "beautifulsoup4==4.13.4",
  "build==1.2.2.post1",
  "cachetools==5.5.2",
  "certifi==2025.4.26",
  "cffi==1.17.1",
  "chardet==5.2.0",
  "charset-normalizer==3.4.2",
  "chromadb==1.0.8",
  "click==8.2.0",
  "colorama==0.4.6",
  "coloredlogs==15.0.1",
  "cryptography==44.0.3",
  "dataclasses-json==0.6.7",
  "deprecated==1.2.18",
  "distro==1.9.0",
  "durationpy==0.9",
  "emoji==2.14.1",
  "eval-type-backport==0.2.2",
  "faiss-cpu==1.11.0",
  "fastapi==0.115.9",
  "filelock==3.18.0",
  "filetype==1.2.0",
  "flatbuffers==25.2.10",
  "frozenlist==1.6.0",
  "fsspec==2025.3.2",
  "google-auth==2.40.1",
  "googleapis-common-protos==1.70.0",
  "greenlet==3.2.2",
  "grpcio==1.67.1",
  "h11==0.16.0",
  "html5lib==1.1",
  "httpcore==1.0.9",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "httpx-sse==0.4.0",
  "huggingface-hub==0.31.1",
  "humanfriendly==10.0",
  "idna==3.10",
  "importlib-metadata==8.6.1",
  "importlib-resources==6.5.2",
  "inflection==0.5.1",
  "jinja2==3.1.6",
  "jiter==0.9.0",
  "joblib==1.5.0",
  "jsonpatch==1.33",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2025.4.1",
  "kubernetes==32.0.1",
  "langchain==0.3.25",
  "langchain-community==0.3.23",
  "langchain-core==0.3.59",
  "langchain-huggingface==0.2.0",
  "langchain-ollama==0.3.2",
  "langchain-openai==0.3.16",
  "langchain-text-splitters==0.3.8",
  "langdetect==1.0.9",
  "langgraph==0.4.3",
  "langgraph-checkpoint==2.0.25",
  "langgraph-prebuilt==0.1.8",
  "langgraph-sdk==0.1.66",
  "langsmith==0.3.42",
  "lmnr==0.5.3",
  "lxml==5.4.0",
  "markdown-it-py==3.0.0",
  "markupsafe==3.0.2",
  "marshmallow==3.26.1",
  "mdurl==0.1.2",
  "mmh3==5.1.0",
  "mpmath==1.3.0",
  "multidict==6.4.3",
  "mypy-extensions==1.1.0",
  "nest-asyncio==1.6.0",
  "networkx==3.4.2",
  "nltk==3.9.1",
  "numpy==2.2.5",
  "oauthlib==3.2.2",
  "olefile==0.47",
  "ollama==0.4.8",
  "onnxruntime==1.21.1",
  "openai==1.78.0",
  "opentelemetry-api==1.33.0",
  "opentelemetry-exporter-otlp-proto-common==1.33.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.33.0",
  "opentelemetry-exporter-otlp-proto-http==1.33.0",
  "opentelemetry-instrumentation==0.54b0",
  "opentelemetry-instrumentation-alephalpha==0.40.4",
  "opentelemetry-instrumentation-anthropic==0.40.4",
  "opentelemetry-instrumentation-asgi==0.54b0",
  "opentelemetry-instrumentation-bedrock==0.40.4",
  "opentelemetry-instrumentation-chromadb==0.40.4",
  "opentelemetry-instrumentation-cohere==0.40.4",
  "opentelemetry-instrumentation-fastapi==0.54b0",
  "opentelemetry-instrumentation-google-generativeai==0.40.4",
  "opentelemetry-instrumentation-groq==0.40.4",
  "opentelemetry-instrumentation-haystack==0.40.4",
  "opentelemetry-instrumentation-lancedb==0.40.4",
  "opentelemetry-instrumentation-langchain==0.40.4",
  "opentelemetry-instrumentation-llamaindex==0.40.4",
  "opentelemetry-instrumentation-marqo==0.40.4",
  "opentelemetry-instrumentation-milvus==0.40.4",
  "opentelemetry-instrumentation-mistralai==0.40.4",
  "opentelemetry-instrumentation-ollama==0.40.4",
  "opentelemetry-instrumentation-openai==0.40.4",
  "opentelemetry-instrumentation-pinecone==0.40.4",
  "opentelemetry-instrumentation-qdrant==0.40.4",
  "opentelemetry-instrumentation-replicate==0.40.4",
  "opentelemetry-instrumentation-requests==0.54b0",
  "opentelemetry-instrumentation-sagemaker==0.40.4",
  "opentelemetry-instrumentation-sqlalchemy==0.54b0",
  "opentelemetry-instrumentation-threading==0.54b0",
  "opentelemetry-instrumentation-together==0.40.4",
  "opentelemetry-instrumentation-transformers==0.40.4",
  "opentelemetry-instrumentation-urllib3==0.54b0",
  "opentelemetry-instrumentation-vertexai==0.40.4",
  "opentelemetry-instrumentation-watsonx==0.40.4",
  "opentelemetry-instrumentation-weaviate==0.40.4",
  "opentelemetry-proto==1.33.0",
  "opentelemetry-sdk==1.33.0",
  "opentelemetry-semantic-conventions==0.54b0",
  "opentelemetry-semantic-conventions-ai==0.4.8",
  "opentelemetry-util-http==0.54b0",
  "orjson==3.10.18",
  "ormsgpack==1.9.1",
  "overrides==7.7.0",
  "packaging==24.2",
  "pdfminer-six==20250506",
  "pillow==11.2.1",
  "posthog==4.0.1",
  "propcache==0.3.1",
  "protobuf==5.29.4",
  "psutil==7.0.0",
  "pyasn1==0.6.1",
  "pyasn1-modules==0.4.2",
  "pycparser==2.22",
  "pydantic==2.11.4",
  "pydantic-core==2.33.2",
  "pydantic-settings==2.9.1",
  "pygments==2.19.1",
  "pypdf==5.4.0",
  "pypika==0.48.9",
  "pyproject-hooks==1.2.0",
  "pyreadline3==3.5.4",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.0",
  "python-iso639==2025.2.18",
  "python-magic==0.4.27",
  "python-oxmsg==0.0.2",
  "pyyaml==6.0.2",
  "rapidfuzz==3.13.0",
  "referencing==0.36.2",
  "regex==2024.11.6",
  "requests==2.32.3",
  "requests-oauthlib==2.0.0",
  "requests-toolbelt==1.0.0",
  "rich==14.0.0",
  "rpds-py==0.24.0",
  "rsa==4.9.1",
  "safetensors==0.5.3",
  "scikit-learn==1.6.1",
  "scipy==1.15.3",
  "sentence-transformers==4.1.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.7",
  "sqlalchemy==2.0.40",
  "starlette==0.45.3",
  "sympy==1.14.0",
  "tenacity==9.1.2",
  "threadpoolctl==3.6.0",
  "tiktoken==0.9.0",
  "tokenizers==0.21.1",
  "torch==2.7.0",
  "tqdm==4.67.1",
  "transformers==4.51.3",
  "typer==0.15.3",
  "typing-extensions==4.13.2",
  "typing-inspect==0.9.0",
  "typing-inspection==0.4.0",
  "unstructured==0.17.2",
  "unstructured-client==0.34.0",
  "urllib3==2.4.0",
  "uvicorn==0.34.2",
  "watchfiles==1.0.5",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "websockets==15.0.1",
  "wrapt==1.17.2",
  "xxhash==3.5.0",
  "yarl==1.20.0",
  "zipp==3.21.0",
  "zstandard==0.23.0",
]
